crates/hwpx/tests/snapshots/parse_fixtures__picture_tests__parse_picture_attributes.snap
---
source: crates/hwpx/tests/parse_fixtures.rs
expression: picture
---
offset:
  "@x": 4294937695
  "@y": 4294967295
orgSz:
  "@width": 59880
  "@height": 11400
curSz:
  "@width": 9749
  "@height": 2567
flip:
  "@horizontal": false
  "@vertical": false
rotationInfo:
  "@angle": 0
  "@centerX": 4874
  "@centerY": 1283
  "@rotateimage": false
renderingInfo:
  transMatrix:
    "@e1": 1
    "@e2": 0
    "@e3": -29601
    "@e4": 0
    "@e5": 1
    "@e6": -1
img:
  "@binaryItemIDRef": image1
  "@bright": 0
  "@contrast": 0
  "@effect": REAL_PIC
  "@alpha": 0
"@id": 1475691556
"@zOrder": 3
"@numberingType": PICTURE
"@textWrap": TOP_AND_BOTTOM
"@textFlow": BOTH_SIDES
"@lock": false
"@href": ""
"@groupLevel": 0
"@instid": 401949733
"@reverse": false
